--- a/music/index.html
+++ b/music/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>To My Dear Allye</title>
+    <title>Document</title>
 </head>
 <body>
-    <canvas id="scene" width="800" height="400"></canvas>
-    <audio id="music" src="music/luv-letter.mp3" controls></audio>
-    <script src="allye.js"></script> 
+    <a id="download" href="#">Download</a>
+    <script src="util.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
